# claude-skills

./: .gitignore  CATEGORIES.md  CLAUDE.md  COMMANDS.md  NOTICE.md  README.md  active-files.md  courierflow-ui-audit.md  courierflow-ui-standards.md  deploy.md  discover.md  docs-cleanup.md  finishing-a-development-branch.md  playwright-test.md  pre-deploy.md  quick-ci.md  review-pr.md  seed-data.md  ship.md  testing.md
off-market/: .gitignore  SKILL.md  pyproject.toml
off-market/examples/: allegheny_pa.yaml  criteria.yaml
off-market/references/: adding-county-adapter.md  fair-housing.md  letter-craft.md  propensity-rubric.md
off-market/scripts/: cache.py  criteria.py  discover.py  models.py  outreach.py  propensity.py  voice_capture.py
off-market/scripts/county_adapters/: allegheny_pa.py  allegheny_sheriff.py
off-market/scripts/listings/: address_norm.py  redfin.py  subtract.py
off-market/scripts/signals/: __init__.py  (+5 more)
off-market/tests/: test_address_norm.py  test_allegheny_pa.py  test_allegheny_sheriff.py  test_cache.py  test_criteria.py  test_discover_cli.py  test_discover_e2e.py  test_discover_live.py  test_listings_redfin.py  test_listings_subtract.py  test_models.py  test_outreach.py  test_outreach_snapshot.py  test_propensity.py  test_propensity_fair_housing.py  test_signals_absentee.py  test_signals_delinquency.py  test_signals_probate_name.py  test_signals_sheriff_sale.py  test_signals_tenure_equity.py  test_voice_capture.py  test_wprdc_delinquency.py  test_wprdc_parcels.py  test_wprdc_sales.py
off-market/voice/: README.md  profile-template.md
(+799 files in other folders)
