[project]
name = "off-market"
version = "0.1.0"
description = "Personal-use motivated-seller discovery skill (free public data)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
